--- a/section_2/cis_2.2/cis_2.2.6.yml
+++ b/section_2/cis_2.2/cis_2.2.6.yml
@@ -20,6 +20,22 @@ package:
       NIST800-53R5:
       - CM-7
       - CM-11
+  tnftp_client:
+    title: 2.2.6 | Ensure ftp client is not installed | tnftp
+    installed: false
+    name: tnftp
+    meta:
+      server: 1
+      workstation: 1
+      CIS_ID: 2.2.6
+      CISv8:
+      - 4.8
+      CISv8_IG1: false
+      CISv8_IG2: true
+      CISv8_IG3: true
+      NIST800-53R5:
+      - CM-7
+      - CM-11
     {{ end }}
   {{ end }}
 {{ end }}
